# codemesh

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  TESTING_CHECKLIST.md  __init__.py  app.py  complex_sample.py  q-dev-chat-2026-03-13.md  requirements-dev.txt  requirements.txt  sample_code.py  {minimal}
config/: .env.example  README.md  __init__.py  config.py  constants.py  exceptions.py  pyproject.toml  pytest.ini  setup.py
core/: __init__.py  analyzer.py  metrics.py  parser.py
docs/: CHANGES_SUMMARY.md  CLEAN_VISUALIZATIONS.md  COLLAPSIBLE_TREE.md  COMPLETE_SUMMARY.md  CONTINUATION_SUMMARY.md  CONTRIBUTING.md  DEPENDENCY_GRAPH_FIX.md  EXTERNAL_DEPENDENCIES.md  FINAL_ORGANIZATION.md  FINAL_REFACTORING.md  FINAL_VERIFICATION.md  FIXES_APPLIED.md  PROJECT_ORGANIZATION.md  QUICKSTART.md  QUICK_REFERENCE.md  SECURITY_FIXES.md  SIMPLIFIED_TREE.md  ULTIMATE_SUMMARY.md  VISUALIZATION_IMPROVEMENTS.md
examples/: README.md  sample_utils.py
managers/: __init__.py  collapse_manager.py  edge_styler.py  external_detector.py  external_grouper.py
scripts/: Makefile  README.md
tests/: __init__.py  test_core.py
ui/: __init__.py  details.py  export.py  metrics.py  search.py  sidebar.py  visualizations.py
utils/: __init__.py  file_handler.py  helpers.py  theme_helper.py  validation.py
visualizations/: __init__.py  call_tree.py  class_hierarchy.py  dependency_graph.py  mind_map.py
